# dataset-browser

./: .gitignore  ADVANCED_SEARCH_GUIDE.md  DASH_APP_README.md  FLUTTER_VS_DASH.md  README.md  dash_app.py  dashboard.py  parquet2tsv.py  parquets2db.py  pyproject.toml  requirements_dash.txt
archive/: quickstart.py
docs/: ADVANCED_SEARCH_IMPLEMENTATION.md  SETUP_SUMMARY.md  UV_GUIDE.md
utilities/: db_join.py  parquets2db.py  run_parquet_to_db_with_join.ps1  run_parquet_to_db_with_join.sh
