[project]
name = "dataset-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
]
